# rapidpro_abtesting

./: .git-blame-ignore-revs  .gitignore  README.md  abtest.py  contact_group.py  language_chooser.py  main.py  main_language_chooser.py  node_tools.py  nodes_layout.py  operations.py  pyproject.toml  rapidpro_abtest_creator.py  requirements.txt  sheets.py  templates.py  testing_tools.py  tests.py  tests_language_chooser.py  uuid_tools.py
src/rapidpro_abtesting/: abtest.py  contact_group.py  language_chooser.py  main.py  main_language_chooser.py  node_tools.py  nodes_layout.py  operations.py  sheets.py  (+3 more)
testdata/: Branching.csv  Branching.json  Branching_equivalent.csv  FlowEdit1_Gender.csv  FlowEdit2_Some1337.csv  FlowEdit_PrependSaveValue.csv  FlowEdit_TranslatedMessage.csv  FlowWithSaveValue.json  Linear_NodeWith3Actions.json  Linear_OneNode4Actions.json  Linear_OneNodePerAction.json  Linear_TwoActionsPerNode.json  RegexMatchFlowNode.csv  RegexMatchFlowNode.json  RegexReplaceFlowNode.csv  SplitByExample.json  Test1Assign_Personalization.csv  Test1_Personalization.csv  Test2Assign_Some1337.csv  Test2_Some1337.csv  Test_OpAcrossTwoFlows.csv  Test_PrependSendMsgAction.csv  Test_ReplaceSplitOperand.csv  Test_TranslationEdits.csv  Test_WaitForResponse.csv  TranslationEdit1.csv  TwoFlowsWithMatchingNode.json  WaitForResponse.json  language_choose_malaysia.csv  master_sheet.csv  master_sheet.json  master_sheet_cfg.csv  master_sheet_ordered.csv  master_sheet_part1.csv  master_sheet_part2.csv  minimal.json
tests/: testing_tools.py  tests.py  tests_language_chooser.py
